--- a/_data/site_settings.yaml
+++ b/_data/site_settings.yaml
@@ -1,4 +1,4 @@
 description: >
-  Software Engineer, Arrow Stomper, Competitive Gamer, Food Enthusiast. 
+  Greetings, I'm Kuat! Software Engineer, Arrow Stomper, Competitive Gamer, Food Enthusiast. 
   Don't be shy, just click the link to know me more! :)
-keywords: 'kuat, hadianto'
+keywords: 'kuat, hadianto, kuat hadianto'
